--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@tanstack/react-table": "^8.21.3",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -46,6 +48,7 @@
     "input-otp": "1.4.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.454.0",
+    "motion": "^12.12.1",
     "next": "15.2.4",
     "next-auth": "^5.0.0-beta.28",
     "next-themes": "^0.4.4",
